fix footer covering

--- a/app/static/results.css
+++ b/app/static/results.css
@@ -250,6 +250,5 @@ h2 {
   } */
 
   .popular-topics {
-    padding-bottom: 150px;
-    margin-bottom: 50px;
+    padding-bottom: 50px;
   }
